--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
           "no-console": "off",
           "no-use-before-define": "off",
           "no-continue": "off",
-          "no-restricted-globals": "off"
+          "no-restricted-globals": "off",
+          "no-param-reassign": "off"
         }
 }
